[package]
name = "thinker"
description = "RethinkDB driver"
version = "0.0.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-rethinkdb/thinker"
documentation = "http://rust-rethinkdb.github.io/thinker/0.1.x/thinker"
readme = "README.md"
keywords = ["database", "rethinkdb", "reql", "driver"]
authors = ["rushmorem <rushmore@webenchanter.com>"]

[dependencies]
ql2 = "1.0.0"
reql = { version = "0.0.3", path = "../reql/" }
r2d2 = "0.7.0"
byteorder = "0.5.1"
bufstream = "0.1.1"

