[package]
name = "thinker"
description = "Merged with https://crates.io/crates/reql"
version = "0.0.2"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-rethinkdb/reql"
documentation = "https://docs.rs/reql"
readme = "README.md"
keywords = ["database", "rethinkdb", "reql", "driver"]
authors = ["rushmorem <rushmore@webenchanter.com>"]

[dependencies]
